slight tweak late requirements

--- a/06-succession.Rmd
+++ b/06-succession.Rmd
@@ -72,6 +72,7 @@ Requirements:
 
 * 1 semester of enrollment within the MSU I/O Psychology program
 * 3.8 GPA
-* persistent and annoying interest
+* At least 1 semester remaining in the program
+* An expressed interest
 
 >Also, any Eagle I.O project is permitted to include the broader MSU I/O Psychology graduate student pool (if someone is interested in participating in projects but either is unable to join or Eagle I.O is currently "full")
