--- a/01-membership.Rmd
+++ b/01-membership.Rmd
@@ -1,11 +1,11 @@
-# Membership
+# Membership Duties
 
 ![](images/team.PNG)
 
 ## Current members
 
-Attend all Eagle IO meetings unless there is a specific reason for absence, maintian a high GPA, actively participate in the group and the products etc. 
+Attend all Eagle IO meetings unless there is a specific reason for absence, maintain a GPA greater than 3.5, actively participate in the group and the products etc. 
 
 ## New members
 
-Need to attend meetings in latter half of fall semester, maintain a GPA > 3.5, perform OCBs in the class, be involved and responsive to professors  and actively contribute to the I/O field at MSU.
+Need to attend meetings in latter half of the Spring semester, maintain a GPA > 3.5, perform OCBs in class, be involved and responsive to professors  and actively contribute to the I/O field at MSU.
