--- a/02-Duties.Rmd
+++ b/02-Duties.Rmd
@@ -2,7 +2,7 @@
 
 ![](images/duty.jpg)
 
-Masters' student consultants are expected to serve 1.5 years. PhD student consultants are expected to serve 1.5 years with an opportunity to renew participation on a year-to-year basis (or to alternatively serve as consultants to Eagle I.O) 
+Masters' student consultants are expected to serve 1.5 years. PhD student consultants are expected to serve 1.5 years with an opportunity to renew participation on a year-to-year basis (or to alternatively serve as consultants to Eagle I.O if they were Masters' student Eagle I.O members) 
 
 ## Eagle I.O Expectations 
 + Coordinate and attend Fall semester orientation session 
@@ -16,7 +16,7 @@ Masters' student consultants are expected to serve 1.5 years. PhD student consul
 + Must participate as a mentor in the Mentorship program
 + For those in formal [roles](#roles):
     + Successfully execute the responsibilities of the assigned role
-    + Keep track of the inbox if you are the **Parlimentarian**
+    + Keep track of the inbox if you are the **Parliamentarian**
 
 ## Eagle I.O Requirements 
 + Ability to work in a team-based environment 
