--- a/05-products.Rmd
+++ b/05-products.Rmd
@@ -10,14 +10,14 @@
         1. area of professional interest
         2. hometown
         3. undergrad major/minor
-        4. part/full time, 
+        4. part/full time
         5. academic/applied 
 * Duration or partnership between mentee and mentor
     + The minimum mandatory term for each mentor/mentee partnership is one academic year (Fall through Spring)
+    + Spring admits will be assigned a mentor by the Mentorship Coordinator
 
-> do we have mentorship program plans for Spring admits?
         
-* Involvement of professors in mentor program beyond Dr. Kulas and Dr. Dan
+* Involvement of professors in mentor program beyond the two Faculty Advisors
     + Minimum of 3 meetings between mentors and mentees: 
         + Meeting 1: Individual Development Plan
         + Meeting 2: I/O related event
