--- a/03-governance.Rmd
+++ b/03-governance.Rmd
@@ -10,7 +10,6 @@ All members are expected to participate for a minimum of 1.5 years (one Fall sem
     + Meetings are mandatory - there is one excused absence per academic semester (Fall and Spring)
         + If you miss *more than one* meeting, and cannot call or make other arrangements for your virtual attendence, you will be put on probation (1 semester term) 
         + If you miss another meeting while on probation you will be expelled from Eagle I.O and fed to **Sir pSyCaDeLiCaT** in an agonizingly painful yet exceedingly beautiful ceremony
-    + Keep track of the inbox *if you are the Parlimentarian*
 
 ```{r kitty3, echo=FALSE, warning=FALSE}
 htmltools::tags$iframe(title = "Embedded HTML", src = "./gifs/giphy.gif", height=490, width=490)
@@ -21,8 +20,9 @@ htmltools::tags$iframe(title = "Embedded HTML", src = "./gifs/giphy.gif", height
 * Either have each consultant discuss and fill out their own individual development plan in terms of Eagle I.O or have a development plan (filled out together) for the organization
     + Potential skills: professional, technical, or R-related skills
     + Meet with Kulas in *April of 1st year* to determine personal consultant goal that will be accomplished prior to graduation (in roughly 1 year)
+    + Meet with Faculty Advisor at the end of the Fall semester to monitor goal progress
 
-> The development plan - maybe you could provide some insights on these.
+
 
 ## Structure {#roles}
 
@@ -39,10 +39,10 @@ As of Spring Semester 2020, the formal roles of Eagle I.O are:
     + Engagement officer
     + Marketing officer
     + Web officer
-    + Parlimentarian 
+    + Parliamentarian 
     + R guru
 
-The following chart is intended to estimate the amount of reliance of each role upon each other. Directionality is also indicated, but all of these numbers are mere esitmates.
+The following chart is intended to estimate the amount of reliance of each role upon each other. Directionality is also indicated, but all of these numbers are mere estimates.
 
 ```{r FunkyInteractiveChart, include=TRUE, echo=FALSE, warning=FALSE, message=FALSE, fig.height=11}
 
@@ -67,7 +67,7 @@ m <- matrix(c(0, 10, 5, 5, 10, 1, 0, 10,10,
             byrow = TRUE,
             nrow = 9, ncol = 9)
 
-contact <- c("Faculty", "Governance", "Marketing", "Mentorship", "Engagement", "Parliment", "R", "Web", "Faculty2")
+contact <- c("Faculty", "Governance", "Marketing", "Mentorship", "Engagement", "Parliament", "R", "Website", "Faculty2")
 
 dimnames(m) <- list(plans = contact,
                     executes = contact)
@@ -117,7 +117,7 @@ connectGrob(total, rando, "h")
 (g3 <- boxGrob("Engagement\n Officer", 
  x=rightm, y=.3, box_gp = gp, height=.15))
 
-(g4 <- boxGrob("Parlimentarian", 
+(g4 <- boxGrob("Parliamentarian", 
  x=rightx, y=.3, box_gp = gp, height=.15))
 
 connectGrob(rando, g1, "N")
@@ -127,7 +127,7 @@ connectGrob(rando, g4, "N")
 
 ```
 
-Additional roles can be assigned on an as neded (e.g., project-by-project) basis. The primary responsibilities of these position holders is presented below. Note that elected officers and program managers always function as team leads - they are ultimately responsible for the listed information, but they are expected to execute tasks within teams:
+Additional roles can be assigned on an as needed (e.g., project-by-project) basis. The primary responsibilities of these position holders are presented below. Note that elected officers and program managers always function as team leads - they are ultimately responsible for the listed information, but they are expected to execute tasks within teams:
 
 
 ```{r roles, echo=FALSE, warning=FALSE, message=FALSE}
@@ -163,4 +163,8 @@ kable(together) %>%
 
 ## Role conflict
 
-> There would need to be a section to deal with "conflict between individuals" because it's only a matter of time
+Eagle I.O members are expected to behave maturely and engage with other members in a respectful and understanding manner. Should arguments and/or disagreements occur regarding decision-making, the faculty advisor has the final say.
+
+If continuous conflict originates from a singular member against the rest of the group, that member will be placed on probation for one semester at the discretion of the faculty advisor.
+
+Once the member returns from their probation, if they continue to engage in aggressive and/or disrespectful behaviors towards the other members, they will be executed.
