--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ description: "This is the student consultant handbook for members of Eagle I.O. 
 # Homepage {-#homepage} 
 
 <center>
-![](images/eagleio2.PNG)
+![](images/eagleio.PNG)
 </center> 
 
 This is the student consultant handbook for members of Eagle I.O. Herein lie expectations, responsibilities, and strategy to keep Eagle I.O sustainable with future [Montclair State University I/O Psychology](https://www.montclair.edu/psychology/graduate-programs/industrial-organizational-psychology/) cohorts...
@@ -28,19 +28,19 @@ This is the student consultant handbook for members of Eagle I.O. Herein lie exp
 
 **About us**:
 
-We are a student-led consulting group within the Industrial/Organizational Psychology program at Montclair State University, founded in 2019. We look at ourselves as hard-working, driven students who wish to strengthen MSU's I/O Psychology program, as well as learn outside of the classroom to build upon our skills and knowledge.  We pride ourselves with strong involvement in other I/O groups locally and nationally - [METRO](https://metroapppsych.com/) and [SIOP](https://siop.org).
+We are a student-led consulting group within the Industrial/Organizational Psychology program at Montclair State University, founded in 2019. We look at ourselves as hard-working, driven students who wish to strengthen MSU's I/O Psychology program, as well as learn outside of the classroom to build upon our skills and knowledge.  We pride ourselves with strong involvement in local and national I/O groups, namely [METRO](https://metroapppsych.com/) and [SIOP](https://siop.org).
 
 **What we do**:
 
 We are responsible for executing various projects. Our main project is developing an Engagement survey, which we wish to distribute to external organizations. We also run a  mentorship program within the MSU I/O program, where we train most of the 2nd year graduate students to guide the new students into becoming successful students themselves. Additionally, we host a variety of events, such as new student orientation,  networking opportunities, and casual hangouts.
 
-As of the Spring 2020 semester, the ongoing projects that Eagle I.O manages include: 
+As of the Fall 2020 semester, the ongoing projects that Eagle I.O manages include: 
 
-+ a [mentorship program](https://bookdown.org/kulasj/mentoruser/) between the 1^st^ year and returning MSU I.O Masters' and PhD program students, 
++ a [mentorship program](https://bookdown.org/kulasj/mentoruser/) between the 1^st^ years and returning MSU I/O Masters' and PhD program students, 
 + an engagement survey, and 
 + this student consultant manual (which includes, for example, a succession plan to sustain and grow Eagle I.O)
 
-Future aspirations are to have Eagle I.O be a client-facing organization that can provide student-led solutions to external clients
+Future aspirations are to have Eagle I.O be a client-facing organization that can provide student-led solutions to external clients.
 
 
 ```{r include=FALSE}
