--- a/index.Rmd
+++ b/index.Rmd
@@ -26,9 +26,9 @@ This is the student consultant handbook for members of Eagle I.O. Herein lie exp
 + This is the participation manual for Eagle I.O student consultants. It contains the expectations, roles, and responsibilities of MSU graduate students who are *also* members of Eagle I.O.
 + Members are expected to participate for 1.5 years (one Fall semester, two Spring semesters, and to be reasonably available over Winter and Summer breaks)
 + As of Spring semester 2020, the ongoing projects that Eagle I.O manages include: 
-    1) a [mentorship program](https://bookdown.org/kulasj/mentoruser/) between the 1^st^ and 2^nd^ year MSU I.O Masters' program student cohorts, 
-    2) an engagement survey, and 
-    3) this student consultant manual (which includes, for example, a succession plan to sustain and grow Eagle I.O)
+    1) A [mentorship program](https://bookdown.org/kulasj/mentoruser/) between the 1^st^ and 2^nd^ year MSU I.O Masters' program student cohorts, and PhD program student cohorts.
+    2) An engagement survey, and 
+    3) This student consultant manual (which includes, for example, a succession plan to sustain and grow Eagle I.O)
 + Future aspirations are to have Eagle I.O. be a client-facing organization that can provide student-led solutions to external clients
 
 
