got rid of weird chart

--- a/02-roles.Rmd
+++ b/02-roles.Rmd
@@ -7,7 +7,7 @@ As of Spring Semester 2020, the organizational structure of Eagle I.O is:
 </center> 
 
 
-```{r trying, echo=FALSE, warning=FALSE, message=FALSE}
+```{r trying, echo=FALSE, warning=FALSE, message=FALSE, include = FALSE}
 
 library(grid)
 library(Gmisc)
