(almost) final edits - Renata gonna do one last tidyness check (capitalization check)

--- a/06-succession.Rmd
+++ b/06-succession.Rmd
@@ -12,10 +12,10 @@ Under special circumstances (as discussed by all members of Eagle I.O) students 
 
 Criteria  
 
-+ Current GPA 3.8 or higher
++ Current GPA 3.5 or higher
 + Organizational Citizenship Behavior (OCBs) - such as presence at events or hangouts
 + Involvement in the membership program
-+ Completed at least 1 Semester of classes in the program (Masters or Ph.D.)
++ Completed at least 1 semester of classes in the program (Masters' or Ph.D.)
 
 
 ## Selection into Formal Roles
