--- a/05-products.Rmd
+++ b/05-products.Rmd
@@ -2,16 +2,16 @@
 
 ![](images/product.PNG)
 
-## [Mentorship Program Management](https://bookdown.org/kulasj/mentoruser/)
+## [Mentorship program management](https://bookdown.org/kulasj/mentoruser/)
 * How to match mentors and mentees 
     + Revisit the method used to match and whether other factors should be considered
     + Form a survey team to create a qualtrics survey and perform the matching process
     + Work to match along 5 dimensions: 
-        1. area of professional interest
-        2. hometown
-        3. undergrad major/minor
-        4. part/full time
-        5. academic/applied 
+        1. Area of professional interest
+        2. Hometown
+        3. Undergrad major/minor
+        4. Part/full time
+        5. Academic/applied 
 * Duration or partnership between mentee and mentor
     + The minimum mandatory term for each mentor/mentee partnership is one academic year (Fall through Spring)
     + Spring admits will be assigned a mentor by the Mentorship Coordinator
