--- a/index.Rmd
+++ b/index.Rmd
@@ -30,41 +30,13 @@ This is the student consultant handbook for members of Eagle I.O. Herein lie exp
 
 We are a [student-led consulting group](https://eagle-io.weebly.com/) within the Industrial/Organizational Psychology program at [Montclair State University](https://www.montclair.edu/psychology/graduate-programs/industrial-organizational-psychology/), founded in 2019. We look at ourselves as hard-working, driven students who wish to strengthen MSU's I/O Psychology program, as well as learn outside of the classroom to build upon our skills and knowledge.  We pride ourselves with strong involvement in local and national I/O groups, namely [METRO](https://metroapppsych.com/) and [SIOP](https://siop.org).
 
+**Our mission**:
+
+Eagle I.O is established to provide students practical and applied learning experiences to develop skills aligned with their personal and professional goals. The group collaborates to execute a variety of I/O internal and external projects. Eagle I.O strives to prepare students to succeed after integrating into the workforce post-graduation.
+
 **What we do**:
 
 We are responsible for executing various projects. Our main project is developing an Engagement survey, which we wish to distribute to external organizations. We also run a  mentorship program within the MSU I/O program, where we train most of the 2nd year graduate students to guide the new students into becoming successful students themselves. Additionally, we host a variety of events, such as new student orientation,  networking opportunities, and casual hangouts.
-
-```{r Date, warning=FALSE, echo=FALSE, message=FALSE}
-
-## created below code so we don't have to manually update year and date
-
-date <- as.character(Sys.Date())
-year <- as.numeric(substring(date,1,4))
-month <- substring(date,6,7)
-
-month[month == "01"] <- "Winter"
-month[month == "02"] <- "Winter"
-month[month == "03"] <- "Spring"
-month[month == "04"] <- "Spring"
-month[month == "05"] <- "Spring"
-month[month == "06"] <- "Summer"
-month[month == "07"] <- "Summer"
-month[month == "08"] <- "Summer"
-month[month == "09"] <- "Fall"
-month[month == "10"] <- "Fall"
-month[month == "11"] <- "Fall"
-month[month == "12"] <- "Winter"
-
-```
-
-As of `r month` `r year`, the ongoing projects that Eagle I.O manages include: 
-
-+ A [mentorship program](https://bookdown.org/kulasj/mentoruser/) between the 1^st^ years and returning MSU I/O Masters' and PhD program students, 
-+ An engagement survey, and 
-+ This student consultant manual (which includes, for example, a succession plan to sustain and grow Eagle I.O)
-
-Future plans are to have Eagle I.O be a client-facing organization that can provide student-led solutions to external clients.
-
 
 ```{r include=FALSE}
 # automatically create a bib database for R packages
